tests/NormalTests/paczka1/fuzzy1/29032229.err
Error in line 16: bJc S987 96,5
Error in line 22: 9BmPLNdlfZq A692 58,1
Error in line 17: bJc A219 97,7
Error in line 30: ZPQu9Odyi A692 S3,2
Error in line 24: 9BmPLNdlfZq A219 6,7
Error in line 32: bJc A692 418,62
Error in line 33: A769 A769 40,8
Error in line 34: qBLUY A692 30,3
